--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "caffeinerush",
   "private": true,
-  "description": "Personal introduction website",
+  "description": "Personal home page",
   "version": "1.0.0",
   "author": "Jukka Hopeavuori <jukka.hopea@gmail.com>",
   "dependencies": {
     "animate-components": "^1.4.8",
+    "babel-eslint": "^10.0.2",
     "babel-plugin-styled-components": "^1.10.1",
     "gatsby": "^2.9.4",
     "gatsby-cli": "^2.6.7",
@@ -16,7 +17,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.5",
     "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typography": "^2.2.13",
+    "gatsby-plugin-typography": "^2.3.0",
     "gatsby-source-contentful": "^2.0.71",
     "gatsby-source-filesystem": "^2.0.39",
     "gatsby-transformer-remark": "^2.4.0",
@@ -29,7 +30,7 @@
     "react-typography": "^0.16.19",
     "styled-components": "^4.3.1",
     "typography": "^0.16.19",
-    "typography-theme-lincoln": "^0.16.19"
+    "typography-breakpoint-constants": "^0.16.19"
   },
   "license": "MIT",
   "scripts": {
@@ -42,7 +43,7 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^3.11.1",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.2",
     "eslint-plugin-react": "^7.14.2",
