--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate-components": "^1.4.8",
     "babel-plugin-styled-components": "^1.10.1",
+    "compass-vertical-rhythm": "^1.4.5",
     "gatsby": "^2.9.4",
     "gatsby-cli": "^2.6.7",
     "gatsby-image": "^2.1.4",
@@ -26,6 +27,7 @@
     "gatsby-source-filesystem": "^2.0.39",
     "gatsby-transformer-remark": "^2.4.0",
     "gatsby-transformer-sharp": "^2.1.21",
+    "gray-percentage": "^2.0.0",
     "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
