--- a/package.json
+++ b/package.json
@@ -11,42 +11,43 @@
   "version": "1.0.0",
   "dependencies": {
     "animate-components": "^1.4.8",
-    "babel-plugin-styled-components": "^1.10.1",
+    "babel-plugin-styled-components": "^1.10.6",
     "compass-vertical-rhythm": "^1.4.5",
-    "gatsby": "^2.9.4",
-    "gatsby-cli": "^2.6.7",
-    "gatsby-image": "^2.1.4",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.3",
+    "gatsby": "^2.13.41",
+    "gatsby-cli": "^2.7.20",
+    "gatsby-image": "^2.2.7",
+    "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.2",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.1.5",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typography": "^2.3.0",
-    "gatsby-source-contentful": "^2.0.71",
-    "gatsby-source-filesystem": "^2.0.39",
-    "gatsby-transformer-remark": "^2.4.0",
-    "gatsby-transformer-sharp": "^2.1.21",
+    "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-typography": "^2.3.2",
+    "gatsby-source-contentful": "^2.1.15",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-remark": "^2.6.9",
+    "gatsby-transformer-sharp": "^2.2.4",
     "gray-percentage": "^2.0.0",
     "moment": "^2.24.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-transition-group": "^4.2.0",
+    "react-helmet": "^5.2.1",
+    "react-transition-group": "^4.2.1",
     "react-typography": "^0.16.19",
-    "styled-components": "^4.3.1",
+    "styled-components": "^4.3.2",
     "typography": "^0.16.19",
-    "typography-breakpoint-constants": "^0.16.19"
+    "typography-breakpoint-constants": "^0.16.19",
+    "yarn-upgrade-all": "^0.5.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react": "^7.14.3",
     "gatsby-plugin-catch-links": "^2.1.2",
     "prettier": "^1.18.2"
   },
