--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-contentful": "^2.1.15",
     "gatsby-source-filesystem": "^2.1.6",
@@ -35,12 +36,20 @@
     "react-helmet": "^5.2.1",
     "react-transition-group": "^4.2.1",
     "react-typography": "^0.16.19",
+    "slash": "^3.0.0",
     "styled-components": "^4.3.2",
     "typography": "^0.16.19",
     "typography-breakpoint-constants": "^0.16.19",
     "yarn-upgrade-all": "^0.5.0"
   },
   "devDependencies": {
+    "@types/node": "^12.6.9",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.18",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
@@ -49,12 +58,14 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "gatsby-plugin-catch-links": "^2.1.2",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"src/**/*.js\"",
-    "start": "npm run develop"
+    "start": "npm run develop",
+    "type-check": "tsc"
   }
 }
