--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-plugin-typography": "^2.3.2",
+    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-source-contentful": "^2.1.15",
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-transformer-remark": "^2.6.9",
